Image spacing issue fix

--- a/responsive-web-design-projects/tribute-page/css/style.css
+++ b/responsive-web-design-projects/tribute-page/css/style.css
@@ -13,6 +13,7 @@
 	background-color: #FFFFFF;
 	border-radius: 5px;
 	margin: 0 auto;
+	padding-top: 10px;
 }
 #image {
 	display: block;
